docs refine
