# model/doc_example_value.go
@@ -5,7 +5,22 @@ type DocResponseSuccess struct {
 	Reason  string `json:"reason" example:""`
 }
 
+type DocResponseAlreadyExisted struct {
+	Success bool   `json:"success" example:"false"`
+	Reason  string `json:"reason" example:"Account is already existed"`
+}
+
 type DocResponseBadRequest struct {
 	Success bool   `json:"success" example:"false"`
 	Reason  string `json:"reason" example:"Password is too short"`
+}
+
+type DocResponseWrongPassword struct {
+	Success bool   `json:"success" example:"false"`
+	Reason  string `json:"reason" example:"Wrong password"`
+}
+
+type DocResponseTooManyRequest struct {
+	Success bool   `json:"success" example:"false"`
+	Reason  string `json:"reason" example:"too many failed login attempt, please try it later"`
 }
